fix problematic elif-tests after recent gcc warning changes Werror=undef

XMLWordPrintable

    • b13
    • generic
    • linux
    • Not verified

      Recently the gcc warning (as errors) settings were changed.
      This change triggers compile errors on Linux at some places.
      Example :

      /OpenJDK/8210319/jdk/src/java.base/unix/native/libnet/net_util_md.h:50:7: error: "__solaris__" is not defined [-Werror=undef]

      Here the check
      #elif __solaris__
      needs to be changed to #elif defined(__solaris__)

      There are more platform-checks in native code with same patterns.

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: