8211146: fix problematic elif-tests after recent gcc warning changes Werror=undef

Reviewed-by: stuefe, clanger, dholmes, chegar, alanb